--- a/tangent-ui/package.json
+++ b/tangent-ui/package.json
@@ -41,6 +41,7 @@
     "react-live": "^4.1.8",
     "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "recharts": "^2.14.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
