--- a/tangent-ui/package.json
+++ b/tangent-ui/package.json
@@ -72,7 +72,7 @@
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "electron-start": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-start": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on https://open-i0or.onrender.com && electron .\"",
     "electron-build": "npm run build && electron ."
   },
   "main": "main.js",
