--- a/tangent-ui/package.json
+++ b/tangent-ui/package.json
@@ -38,6 +38,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph-2d": "^1.27.1",
     "react-live": "^4.1.8",
     "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
