--- a/tangent-ui/package.json
+++ b/tangent-ui/package.json
@@ -66,7 +66,7 @@
     "webpack-obfuscator": "^3.5.1"
   },
   "homepage": "./",
-  "name": "tangent-ui",
+  "name": "dialogos-ui",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
