--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "d3": "^7.9.0",
-    "reactflow": "^11.11.4"
+    "react-force-graph-2d": "^1.27.1",
+    "reactflow": "^11.11.4",
+    "three": "^0.176.0"
   }
 }
